removed missing mons

--- a/templates/partials/home_banner.html
+++ b/templates/partials/home_banner.html
@@ -18,5 +18,5 @@
     {%- endif -%}
 </div>
 
-<script src="/js/random-pokemon.js" defer></script>
+<script src="/js/random-pokemon.js?v=2" defer></script>
 
